--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "robotf-extension",
-    "displayName": "RobotF Extension",
-    "description": "Extension for robot framework",
+    "name": "robot-beautify",
+    "displayName": "RobotFramework Beautifier",
+    "description": "Extension to beatutify robotframework",
     "version": "1.6.8",
-    "publisher": "kmk-labs",
+    "publisher": "duychu",
     "icon": "icon.png",
     "engines": {
         "vscode": "^1.11.0"
@@ -16,16 +16,18 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "languages": [{
-            "id": "robot",
-            "aliases": [
-                "robotframework"
-            ],
-            "extensions": [
-                "robot"
-            ],
-            "configuration": "./language-configuration.json"
-        }]
+        "languages": [
+            {
+                "id": "robot",
+                "aliases": [
+                    "robotframework"
+                ],
+                "extensions": [
+                    "robot"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
@@ -34,15 +36,15 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
+        "@types/mocha": "^2.2.32",
         "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
+        "mocha": "^2.3.3",
+        "typescript": "^3.9.7",
+        "vscode": "^1.0.0"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/KMK-ONLINE/vscode-robotExtension.git"
+        "url": "https://github.com/duychu/vscode-robotExtension.git"
     },
     "dependencies": {
         "async": "^2.3.0",
